<resources>
    <string name="app_name">PlanEd</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="get_started">Get Started</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="secondary_text">secondary_text</string>
    <string name="content_description_media">content_description_media</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to PlanED!</string>
    <string name="nav_header_subtitle">Hello There</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="account">account</string>
    <string name="short_shortcut">test</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="_00_00">00:00</string>
    <string name="change_time">Change Time</string>
    <string name="add_activity">Add Activity</string>
    <string name="delete_all">Delete All</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="your_pill_reminders">Your Pill Reminders</string>
    <string name="pill_reminder">Pill Reminder</string>


</resources>