<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/fragment_listplans_myplans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Daily Plan"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_listplans_recylerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_listplans_myplans">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_plans_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />


        <TextView
            android:id="@+id/add_plans_action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:text="@string/add_activity"
            app:layout_constraintEnd_toStartOf="@+id/add_plans_fab"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/delete_plans_action_text"
            app:layout_constraintTop_toTopOf="@+id/add_plans_fab" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_delete_all_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/add_plans_action_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_alarm_fab"
            app:srcCompat="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/delete_plans_action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/delete_all"
            app:layout_constraintBottom_toTopOf="@+id/add_plans_action_text"
            app:layout_constraintEnd_toStartOf="@+id/button_delete_all_plans"
            app:layout_constraintTop_toTopOf="@+id/button_delete_all" />


        <LinearLayout
            android:id="@+id/fragment_viewplan_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/fragment_listplans_recylerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_listplans_myplans">

            <CheckBox
                android:id="@+id/fragment_viewplan_checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/fragment_viewplan_checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/fragment_viewplan_checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />

            <CheckBox
                android:id="@+id/fragment_viewplan_checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />

            <CheckBox
                android:id="@+id/fragment_viewplan_checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/fragment_viewplan_checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />

            <CheckBox
                android:id="@+id/fragment_viewplan_checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>